fluxcd/apps/base/shields/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: shields
  annotations:
    linkerd.io/inject: enabled
